<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DashboardUserActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/image_ppps"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menu"
            android:layout_marginEnd="8dp"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="AKTU Study Material"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/imp"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="4dp"
        app:cardCornerRadius="12dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="17dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_notes"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/notes_image"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/image_notes"
                    android:text="Welcome to AKTU Study Material"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="16dp"
                    android:padding="2dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Explore hand-written and printed notes, previous year papers, and 2nd Year content will come soon."
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:padding="2dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imp"
        android:layout_above="@+id/bottom_navigation"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/handcard"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:elevation="4dp"
                    app:cardBackgroundColor="@color/light_gray"
                    app:cardCornerRadius="12dp">

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/hm1"
                        android:contentDescription="@string/hand_written_notes_image" />

                    <TextView
                        android:id="@+id/t1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:padding="8dp"
                        android:text="Hand Written Notes"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/printcard"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:elevation="4dp"
                    app:cardBackgroundColor="@color/light_gray"
                    app:cardCornerRadius="12dp">

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/printed_notes_image"
                        android:src="@drawable/bkk" />

                    <TextView
                        android:id="@+id/t2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:padding="8dp"
                        android:text="Printed Notes"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/quescard"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:elevation="4dp"
                    app:cardBackgroundColor="@color/light_gray"
                    app:cardCornerRadius="12dp">

                    <ImageView
                        android:id="@+id/img3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/exm1"
                        android:contentDescription="@string/previous_year_question_paper_image" />

                    <TextView
                        android:id="@+id/t3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:padding="5dp"
                        android:text="Previous Year Papers"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/practicecard"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:elevation="4dp"
                    app:cardBackgroundColor="@color/light_gray"
                    app:cardCornerRadius="12dp">

                    <ImageView
                        android:id="@+id/img4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/hm1"
                        android:contentDescription="@string/practice_question_paper_image" />

                    <TextView
                        android:id="@+id/t4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:padding="8dp"
                        android:text="Practice Papers"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/resultcard"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:elevation="4dp"
                    app:cardBackgroundColor="@color/light_gray"
                    app:cardCornerRadius="12dp">

                    <ImageView
                        android:id="@+id/img5"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/rc1"
                        android:contentDescription="@string/aktu_result_image" />

                    <TextView
                        android:id="@+id/t5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:padding="8dp"
                        android:text="AKTU Result"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/syllabuscard"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:elevation="4dp"
                    app:cardBackgroundColor="@color/light_gray"
                    app:cardCornerRadius="12dp">

                    <ImageView
                        android:id="@+id/img6"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/logo"
                        android:contentDescription="@string/aktu_syllabus_image" />

                    <TextView
                        android:id="@+id/t6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:padding="8dp"
                        android:text="AKTU Syllabus"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:layout_below="@id/toolbar">
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/toolbar2" />
</RelativeLayout>
